RESOLVED FIXED54947
Web Inspector: [REGRESSION] navigation does not work when inspector is opened
https://bugs.webkit.org/show_bug.cgi?id=54947
Summary Web Inspector: [REGRESSION] navigation does not work when inspector is opened
Pavel Podivilov
Reported 2011-02-22 04:09:57 PST
Navigation hangs when inspector is opened.
Attachments
Patch. (2.77 KB, patch)
2011-02-22 04:41 PST, Pavel Podivilov
pfeldman: review+
Pavel Podivilov
Comment 1 2011-02-22 04:41:01 PST
Pavel Feldman
Comment 2 2011-02-22 06:03:07 PST
Comment on attachment 83300 [details] Patch. View in context: https://bugs.webkit.org/attachment.cgi?id=83300&action=review > Source/WebCore/inspector/InspectorState.cpp:50 > if (!m_properties) else? (otherwise properties from the old instance will stay).
Pavel Podivilov
Comment 3 2011-02-22 07:09:40 PST
Csaba Osztrogonác
Comment 4 2011-02-22 10:04:16 PST
(In reply to comment #3) > Committed r79319: <http://trac.webkit.org/changeset/79319> It broke ~90 tests on Qt bot. :( Have you got any idea why?
Pavel Feldman
Comment 5 2011-02-22 12:02:38 PST
(In reply to comment #4) > (In reply to comment #3) > > Committed r79319: <http://trac.webkit.org/changeset/79319> > > It broke ~90 tests on Qt bot. :( Have you got any idea why? It does not seem to change anything wrt Qt. I'll investigate a bit more.
Pavel Feldman
Comment 6 2011-02-22 12:04:45 PST
(In reply to comment #5) > (In reply to comment #4) > > (In reply to comment #3) > > > Committed r79319: <http://trac.webkit.org/changeset/79319> > > > > It broke ~90 tests on Qt bot. :( Have you got any idea why? > > It does not seem to change anything wrt Qt. I'll investigate a bit more. Need a Qt build, will do tomorrow. In the meanwhile, we can either roll out or Skipp qt. I prefer the latter since it fixes a nasty problem.
Csaba Osztrogonác
Comment 7 2011-02-22 12:07:11 PST
I tried to roll out locally, but it didn't solve the problem. And then I tried http://trac.webkit.org/changeset/79319 and it works for me. It seems http://trac.webkit.org/changeset/79320 broke inspector tests somehow.
Pavel Feldman
Comment 8 2011-02-22 12:11:04 PST
(In reply to comment #7) > I tried to roll out locally, but it didn't solve the problem. And then I > tried http://trac.webkit.org/changeset/79319 and it works for me. It seems > http://trac.webkit.org/changeset/79320 broke inspector tests somehow. Oh, ok. That would explain it. The symptoms point to missing front-end. Is it deployed?
Csaba Osztrogonác
Comment 9 2011-02-22 12:13:19 PST
Andras, it seems your patch broke the inspector tests. Could you check it, please?
Pavel Feldman
Comment 10 2011-02-22 12:15:38 PST
(In reply to comment #9) > Andras, it seems your patch broke the inspector tests. Could you check it, please? Front-end uses generated file: INSPECTOR_BACKEND_STUB_QRC = inspector/front-end/InspectorBackendStub.qrc Is this line missing in the new project file?
Note You need to log in before you can comment on or make changes to this bug.