2011-02-22  Pavel Podivilov  <podivilov@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: [REGRESSION] navigation does not work when inspector is opened.
        https://bugs.webkit.org/show_bug.cgi?id=54947

        * inspector/InspectorAgent.cpp:
        (WebCore::InspectorAgent::restoreInspectorStateFromCookie):
        * inspector/InspectorState.cpp:
        (WebCore::InspectorState::loadFromCookie):
        * inspector/InspectorState.h:

Canonical link: https://commits.webkit.org/69242@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79319 268f45cc-cd09-0410-ab3c-d52691b4dbfc